@@ -3,6 +3,7 @@
 	Update to support SMBIOS specification version 3.1.1.
 
 	* dmidecode.c: Add support for 3-digit versions.
+	* dmidecode.c: Add new enumerated values for processors (DMI type 4).
 
 2017-04-27  Jean Delvare  <jdelvare@suse.de>
 
